# quant-lab

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
.github/workflows/: ci.yml  morning.yml  recalibrate.yml  stress.yml  watchdog.yml
.omc/state/: hud-stdin-cache.json
competitors/: README.md
competitors/codex-bot-snapshot-2026-05-07/: .gitignore  README.md  (+2 more)
config/: universe_classic.txt  universe_multiasset.txt  universe_phase1.txt  universe_r1000.txt  universe_sp500.txt  watchlist.example.txt
dashboard/: app.js  backtest.html  backtest.js  bot.html  bot.js  compare.html  compare.js  historical.html  historical.js  index.html  methodology.html  styles.css  validation.html  validation.js
models/: gradboost-2026-05-08.joblib  lightforest-2026-05-08.joblib
state/: bot_journal.jsonl  last_morning.json  nav_history.json  portfolios.json  strategy_lifecycle.json  trades.jsonl
tests/: conftest.py  test_apex.py  test_apex_brief.py  test_backtest_cli.py  test_backtest_e2e.py  test_backtest_harness.py  test_backtest_report.py  test_backtest_stats.py  test_backtest_windows.py  test_blend.py  test_breakout.py  test_calendar.py  test_codex_bot.py  test_dashboard.py  test_dashboard_polish.py  test_data.py  test_discord.py  test_e2e_smoke.py  test_ensemble_weights.py  test_factors.py  test_hmm_regime.py  test_journal.py  test_lifecycle.py  test_live_calibration.py  test_ma_cross.py  test_main.py  test_meanrev.py  test_meta_ensemble.py  test_ml_features.py  test_ml_strategies.py  test_ml_train.py  test_ml_validate.py  test_momo.py  test_new_strategy_bots.py  test_paper_engine.py  test_persistence.py  test_phase2_e2e.py  test_phase5_e2e.py  test_phase6a_e2e.py  test_qlib_bots.py  (+11 more)
(+137 files in other folders)
