[project]
name = "quant-lab"
version = "0.1.0"
description = "Personal quant research lab + morning briefing bot"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.32",
    "python-dateutil>=2.9",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.5",
]

[project.scripts]
quant-lab = "quant_lab.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "competitors/codex-bot-snapshot-2026-05-07/src"]

[tool.ruff]
line-length = 100
target-version = "py311"
